[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/MenuBG.png" type="Texture" id=1]
[ext_resource path="res://UI/Beyond Wonderland.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/unknown.png" type="Texture" id=3]
[ext_resource path="res://UI/Rage.png" type="Texture" id=4]
[ext_resource path="res://UI/Brain.png" type="Texture" id=5]
[ext_resource path="res://Scripts/ClassSelect.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
extra_spacing_space = 1
font_data = ExtResource( 2 )

[node name="Class" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -482, -25 )
scale = Vector2( 0.533, 0.533 )
texture = ExtResource( 1 )
offset = Vector2( 1864.92, 598.499 )

[node name="Friendship" type="Button" parent="."]
anchor_right = 0.08
anchor_bottom = 0.6
margin_left = 169.0
margin_top = 107.0
margin_right = 248.0
margin_bottom = 127.0
text = "Friendship"

[node name="Friendship" type="TextEdit" parent="Friendship"]
anchor_left = 0.045
anchor_right = 0.155
margin_left = -7.37964
margin_right = 84.9192
margin_bottom = 250.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
custom_constants/line_spacing = 8
custom_fonts/font = SubResource( 1 )
text = "    Friendship



 Upon Defeat :
 Gain Health"
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Sprite" type="Sprite" parent="Friendship"]
position = Vector2( 82, 99 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Rage" type="Button" parent="."]
anchor_right = 0.08
anchor_bottom = 0.6
margin_left = 427.0
margin_top = 107.0
margin_right = 506.0
margin_bottom = 127.0
text = "Friendship"

[node name="Rage" type="TextEdit" parent="Rage"]
anchor_left = 0.045
anchor_right = 0.155
margin_left = -7.37964
margin_right = 84.9192
margin_bottom = 250.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
custom_constants/line_spacing = 8
custom_fonts/font = SubResource( 1 )
text = "       Rage



 Upon Defeat :
 Gain Damage
 Gain Speed"
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Sprite" type="Sprite" parent="Rage"]
position = Vector2( 84, 103 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Prepardness" type="Button" parent="."]
anchor_right = 0.08
anchor_bottom = 0.6
margin_left = 687.0
margin_top = 107.0
margin_right = 766.0
margin_bottom = 127.0
text = "Friendship"

[node name="Prepardness" type="TextEdit" parent="Prepardness"]
anchor_left = 0.045
anchor_right = 0.155
margin_left = -7.37964
margin_right = 84.9192
margin_bottom = 250.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_filter = 2
custom_constants/line_spacing = 8
custom_fonts/font = SubResource( 1 )
text = "   Prepardness



 Upon Defeat :
 Drop a bomb
 It was all 
 part of your
 plan"
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Sprite" type="Sprite" parent="Prepardness"]
position = Vector2( 84, 105 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Friendship" to="." method="_on_Friendship_pressed"]
[connection signal="pressed" from="Rage" to="." method="_on_Rage_pressed"]
[connection signal="pressed" from="Prepardness" to="." method="_on_Prepardness_pressed"]
